# VRCMediaController

./: .gitignore  Cargo.toml  MediaController.unitypackage  Modular_Avatar_Guide.md  README.md  build.bat  build.rs  config.json  config.py  i18n.py  main.py  main.spec  media_control.py  osc_runner.py  requirements.txt
.github/workflows/: release.yml
core/: config.py  i18n.py  osc_runner.py
src/: config.rs  display.rs  heart_rate.rs  i18n.rs  main.rs  media.rs  osc.rs
