[package]
name = "vrc-media-controller"
version = "1.0.0"
edition = "2021"
description = "VRChat Media Controller - Bridge Windows media playback with VRChat"

[dependencies]
rosc = "0.11"
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
socket2 = "0.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Control",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }
tray-icon = "0.17"
image = "0.25"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
